--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <form action="">
         <input type="text" id="nome" required placeholder="digite seu nome">
         <input type="email"id="email"required placeholder="digite seu email">
-        <input type="email" name="confirmaçao de email"required id="confirmaçao de email" placeholder="confirme seu email">
+        <input type="email" name="confirmaçao de email"required id="confirm" placeholder="confirme seu email">
         <input type="password"  id="senha"required placeholder="digite uma senha">
         <select name="sexo" id="sexo">
             <option selected disabled value="">sexo</option>
