--- a/index.html
+++ b/index.html
@@ -1,27 +1,35 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer ></script>
+    <script src="script.js" defer></script>
     <title>Document</title>
 </head>
+
 <body>
-    <h1>CADASTRE-SE</h1>
-    <form action="">
+    <div>
+        <h1>CADASTRE-SE</h1>
         <input type="text" id="nome" required placeholder="digite seu nome">
-        <input type="email"id="email"required placeholder="digite seu email">
-        <input type="email" name="confirmaçao de email"required id="confirm" placeholder="confirme seu email">
-        <input type="password"  id="senha"required placeholder="digite uma senha">
-        <select name="sexo" id="sexo">
-            <option selected disabled value="">sexo</option>
-            <option value="masculino">masculino</option>
-            <option value="feminino">feminino</option>
-            <option value="não definido">não definido</option>
-        </select>
-        <button>enviar</button>
-    </form>
+            <input type="email" id="email" required placeholder="digite seu email">
+            <input type="email" required id="confirm" placeholder="confirme seu email">
+            <input type="password" id="senha" required placeholder="digite uma senha">
+            <select id="sexo">
+                <option selected disabled value="">sexo</option>
+                <option value="masculino">masculino</option>
+                <option value="feminino">feminino</option>
+                <option value="não definido">não definido</option>
+            </select>
+            <button>enviar</button>
+    </div>
+    <section>
+        <h2></h2>
+        <p></p>
+        <a href=""></a>
+    </section>
 </body>
+
 </html>
